[package]
name = "node_parser"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.79"
serde_yaml = "0.8.23"
onig = "6.3.1"
indicatif = {version = "*", features = ["with_rayon"]}
log = "*"
serde = { version = "1.0.136", features = ["derive", "rc"] }
env_logger = "0.9.0"
rayon  = "1.3.0"

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6"]
